<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OCV Image Manipulations</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating...</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>

    <!--实例字符串-->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="menu_next_camera">Next Cam</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="photo_delete_prompt_message">This photo is saved in your Gallery.Do you want to delete it?</string>
    <string name="photo_delete_prompt_title">Delete photo?</string>
    <string name="photo_error_message">Failed to save photo</string>
    <string name="photo_edit_chooser_title">Edit photo with &#8230;</string>
    <string name="photo_send_chooser_title">Share photo with&#8230;</string>
    <string name="phtoto_send_extra_subject">My photo from Second Sight</string>
    <string name="photo_send_extra_text">Check out my photo from the Second Sight app!</string>
    <string name="share">Share</string>

    <string name="menu_next_curve_filter">Next Curve</string>
    <string name="menu_next_mixer_filter">Next Mixer</string>
    <string name="menu_next_convolution_filter">Next Kernel</string>
    <string name="menu_next_image_detection_filter">Next Tracker</string>
</resources>
